@@ -1,5 +1,5 @@
 plugins {
-    kotlin("jvm") version "2.0.20"
+    kotlin("jvm") version "1.9.25"
 }
 
 group = "ca.myasir"
@@ -10,12 +10,29 @@ repositories {
 }
 
 dependencies {
-    testImplementation(kotlin("test"))
+    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.9.25")
+    implementation("commons-io:commons-io:2.18.0")
+
+    testImplementation("org.jetbrains.kotlin:kotlin-test:1.9.25")
+    testImplementation("io.mockk:mockk:1.13.13")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+    testImplementation("org.jetbrains.kotlin:kotlin-reflect")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
-tasks.test {
+tasks.withType<Test> {
     useJUnitPlatform()
+
+    jvmArgs(
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
+    )
 }
+
 kotlin {
     jvmToolchain(17)
+
+    compilerOptions {
+        freeCompilerArgs.addAll("-Xjsr305=strict")
+    }
 }
